# hello-nucleo-f103rb

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
examples/: button.rs  gpio_led.rs  serial_echo.rs  serial_led_control.rs
src/: main.rs
